Added step up 2fa for library api methods. Update to v0.8.0
